mongoose + products mws

--- a/views/editProduct.ejs
+++ b/views/editProduct.ejs
@@ -15,7 +15,7 @@
 
         <div class="form-group row mb-3">
             <label class="col-2" for="maxValidResult">Maximum valid result value</label>
-            <input type="number" class="form-control col-4" id="minValidResult" name="minValidResult" placeholder="Maximum valid result value"
+            <input type="number" class="form-control col-4" id="maxValidResult" name="maxValidResult" placeholder="Maximum valid result value"
                 value="<%=product.maxValidResult%>" />
         </div>
 
