--- a/views/products.ejs
+++ b/views/products.ejs
@@ -39,7 +39,7 @@
                         <td>
                             <div class="d-flex justify-content-between">
                                 <a href="/product/<%=p.id%>"><button>edit</button></a>
-                                <button>delete</button>
+                                <a href="/product/<%=p.id%>/delete"><button>delete</button></a>
                             </div>
                         </td>
                     </tr>
