--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -13,7 +13,7 @@
 
         <div class="form-group row mb-3">
             <label class="col-2" for="maxValidResult">Maximum valid result value</label>
-            <input type="number" class="form-control col-4" id="minValidResult" name="minValidResult" placeholder="Maximum valid result value" />
+            <input type="number" class="form-control col-4" id="maxValidResult" name="maxValidResult" placeholder="Maximum valid result value" />
         </div>
 
         <div class="row col-4  d-flex justify-content-between">
