--- a/views/addMeasurement.ejs
+++ b/views/addMeasurement.ejs
@@ -12,8 +12,8 @@
         </div>
 
         <div class="form-group row d-flex justify-content-start mb-3">
-            <label class="col-2" for="result">Product</label>
-            <select class="form-control col-4" id="productId" name="productId">
+            <label class="col-2" for="productid">Product</label>
+            <select class="form-control col-4" id="productid" name="productid">
                 <% products.forEach(function(p) { %>
                     <option value="<%=p.id%>">
                         <%=p.name%>
@@ -28,7 +28,7 @@
         </div>
         <div class="row col-5  d-flex justify-content-between">
             <button type="submit" class="btn btn-primary col-2 ml-4">Save</button>
-            <a class="col-2 ml-4" href="/"><button class="btn btn-danger">Cancel</button></a>
+            <a class="col-2 ml-4" href="/"><button type="button" class="btn btn-danger">Cancel</button></a>
         </div>
     </form>
     <%- include('footer') -%>
