--- a/views/addProduct.ejs
+++ b/views/addProduct.ejs
@@ -18,7 +18,7 @@
 
         <div class="row col-4  d-flex justify-content-between">
             <button type="submit" class="btn btn-primary col-2">Save</button>
-            <a class="col-2 mr-2"><button class="btn btn-danger">Cancel</button></a>
+            <a href="/products" class="col-2 mr-2"><button type="button" class="btn btn-danger">Cancel</button></a>
         </div>
     </form>
     <%- include('footer') -%>
