--- a/views/editMeasurement.ejs
+++ b/views/editMeasurement.ejs
@@ -13,8 +13,8 @@
         </div>
 
         <div class="form-group row d-flex justify-content-start mb-3" >
-            <label class="col-2" for="result">Product</label>
-            <select class="form-control col-4" id="productId" name="productId">
+            <label class="col-2" for="productid">Product</label>
+            <select class="form-control col-4" id="productid" name="productid">
                 <% products.forEach(function(p) { %>
                     <option value="<%=p.id%>">
                         <%=p.name%>
@@ -30,7 +30,7 @@
 
         <div class="row col-5  d-flex justify-content-between">
             <button type="submit" class="btn btn-primary col-2 ml-4">Save</button>
-            <a class="col-2 ml-4"><button class="btn btn-danger">Cancel</button></a>
+            <a href="/" class="col-2 ml-4"><button type="button" class="btn btn-danger">Cancel</button></a>
         </div>
     </form>
     <%- include('footer') -%>
