--- a/views/editMeasurement.ejs
+++ b/views/editMeasurement.ejs
@@ -4,12 +4,12 @@
         <div class="form-group row mb-3">
             <label class="col-2" for="sample">Sample number</label>
             <input type="text" class="form-control col-4" id="sample" name="sample" placeholder="Sample Number"
-                value="<%measurement.sample%>" />
+                value="<%=measurement.sample%>" />
         </div>
 
         <div class="form-group row mb-3">
             <label class="col-2" for="result">Result</label>
-            <input type="number" class="form-control col-4" id="result" name="result" placeholder="Result" value="<%measurement.result%>" />
+            <input type="number" class="form-control col-4" id="result" name="result" placeholder="Result" value="<%=measurement.result%>" />
         </div>
 
         <div class="form-group row d-flex justify-content-start mb-3" >
@@ -25,7 +25,7 @@
 
         <div class="form-group row d-flex justify-content-start mb-3">
             <label class="col-2" for="operator">Operator</label>
-            <input type="text" placeholder="Operator" class="form-control col-4" value="<%measurement.operator%>" id="operator" name="operator"/>
+            <input type="text" placeholder="Operator" class="form-control col-4" value="<%=measurement.operator%>" id="operator" name="operator"/>
         </div>
 
         <div class="row col-5  d-flex justify-content-between">
